data/derived/comb/progs/unify/prog5083.ml.out
Characters 73-90:
  (pow+ 1, total + mulByDigit( x l2) * 10 ** pow) in
                   ^^^^^^^^^^^^^^^^^
Error: This expression has type int list -> int list
       but an expression was expected of type int
